# Vireon_TRP_Time

./: Add demo results template.  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-DOCS  MANIFEST.in  README.md  SECURITY.md  THEORY.md  Usage  demo_trp_stub.py  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  demo_results.md
.github/workflows/: ci.yml
docs/: priority.md
prereg/: DEMO_A_TOY.md  DEMO_B_HUMAN.md  DEMO_C_STRUCTURED.md
scripts/: demo_controls.py  demo_toy_env.py
src/vireon_trp/: __init__.py  controls.py  leash.py  metrics.py  models.py
src/vireon_trp/quantum/: __init__.py  kl_leash.py
tests/: test_leash.py  test_metrics.py  test_quantum_kl_leash.py  test_toy_model.py
tests/tests/: test_quantum_kl_leash.py
